--- a/index.html
+++ b/index.html
@@ -52,70 +52,70 @@
 <img usemap="#skillmap" id="skill_tree" src="">
 <map id="skillmap" name="skillmap">
 <!--	skill hover areas	-->
-<area coords="14,16,62,64" id="st1r1c1"><area coords="83,16,131,64" id="st1r1c2"><area coords="152,16,200,64" id="st1r1c3">
-<area coords="14,84,62,132" id="st1r2c1"><area coords="83,84,131,132" id="st1r2c2"><area coords="152,84,200,132" id="st1r2c3">
-<area coords="14,152,62,200" id="st1r3c1"><area coords="83,152,131,200" id="st1r3c2"><area coords="152,152,200,200" id="st1r3c3">
-<area coords="14,220,62,268" id="st1r4c1"><area coords="83,220,131,268" id="st1r4c2"><area coords="152,220,200,268" id="st1r4c3">
-<area coords="14,289,62,337" id="st1r5c1"><area coords="83,289,131,337" id="st1r5c2"><area coords="152,289,200,337" id="st1r5c3">
-<area coords="14,357,62,405" id="st1r6c1"><area coords="83,357,131,405" id="st1r6c2"><area coords="152,357,200,405" id="st1r6c3">
+<area coords="14,16,62,64" id="s111"><area coords="83,16,131,64" id="s112"><area coords="152,16,200,64" id="s113">
+<area coords="14,84,62,132" id="s121"><area coords="83,84,131,132" id="s122"><area coords="152,84,200,132" id="s123">
+<area coords="14,152,62,200" id="s131"><area coords="83,152,131,200" id="s132"><area coords="152,152,200,200" id="s133">
+<area coords="14,220,62,268" id="s141"><area coords="83,220,131,268" id="s142"><area coords="152,220,200,268" id="s143">
+<area coords="14,289,62,337" id="s151"><area coords="83,289,131,337" id="s152"><area coords="152,289,200,337" id="s153">
+<area coords="14,357,62,405" id="s161"><area coords="83,357,131,405" id="s162"><area coords="152,357,200,405" id="s163">
 
-<area coords="245,16,293,62" id="st2r1c1"><area coords="314,16,362,62" id="st2r1c2"><area coords="383,16,434,62" id="st2r1c3">
-<area coords="245,84,293,132" id="st2r2c1"><area coords="314,84,362,132" id="st2r2c2"><area coords="383,84,434,132" id="st2r2c3">
-<area coords="245,152,293,200" id="st2r3c1"><area coords="314,152,362,200" id="st2r3c2"><area coords="383,152,434,200" id="st2r3c3">
-<area coords="245,220,293,268" id="st2r4c1"><area coords="314,220,362,268" id="st2r4c2"><area coords="383,220,434,268" id="st2r4c3">
-<area coords="245,289,293,337" id="st2r5c1"><area coords="314,289,362,337" id="st2r5c2"><area coords="383,289,434,337" id="st2r5c3">
-<area coords="245,357,293,405" id="st2r6c1"><area coords="314,357,362,405" id="st2r6c2"><area coords="383,357,434,405" id="st2r6c3">
+<area coords="245,16,293,62" id="s211"><area coords="314,16,362,62" id="s212"><area coords="383,16,434,62" id="s213">
+<area coords="245,84,293,132" id="s221"><area coords="314,84,362,132" id="s222"><area coords="383,84,434,132" id="s223">
+<area coords="245,152,293,200" id="s231"><area coords="314,152,362,200" id="s232"><area coords="383,152,434,200" id="s233">
+<area coords="245,220,293,268" id="s241"><area coords="314,220,362,268" id="s242"><area coords="383,220,434,268" id="s243">
+<area coords="245,289,293,337" id="s251"><area coords="314,289,362,337" id="s252"><area coords="383,289,434,337" id="s253">
+<area coords="245,357,293,405" id="s261"><area coords="314,357,362,405" id="s262"><area coords="383,357,434,405" id="s263">
 
-<area coords="476,16,524,62" id="st3r1c1"><area coords="545,16,593,62" id="st3r1c2"><area coords="614,16,662,62" id="st3r1c3">
-<area coords="476,84,524,132" id="st3r2c1"><area coords="545,84,593,132" id="st3r2c2"><area coords="614,84,662,132" id="st3r2c3">
-<area coords="476,152,524,200" id="st3r3c1"><area coords="545,152,593,200" id="st3r3c2"><area coords="614,152,662,200" id="st3r3c3">
-<area coords="476,220,524,268" id="st3r4c1"><area coords="545,220,593,268" id="st3r4c2"><area coords="614,220,662,268" id="st3r4c3">
-<area coords="476,289,524,337" id="st3r5c1"><area coords="545,289,593,337" id="st3r5c2"><area coords="614,289,662,337" id="st3r5c3">
-<area coords="476,357,524,405" id="st3r6c1"><area coords="545,357,593,405" id="st3r6c2"><area coords="614,357,662,405" id="st3r6c3">
+<area coords="476,16,524,62" id="s311"><area coords="545,16,593,62" id="s312"><area coords="614,16,662,62" id="s313">
+<area coords="476,84,524,132" id="s321"><area coords="545,84,593,132" id="s322"><area coords="614,84,662,132" id="s323">
+<area coords="476,152,524,200" id="s331"><area coords="545,152,593,200" id="s332"><area coords="614,152,662,200" id="s333">
+<area coords="476,220,524,268" id="s341"><area coords="545,220,593,268" id="s342"><area coords="614,220,662,268" id="s343">
+<area coords="476,289,524,337" id="s351"><area coords="545,289,593,337" id="s352"><area coords="614,289,662,337" id="s353">
+<area coords="476,357,524,405" id="s361"><area coords="545,357,593,405" id="s362"><area coords="614,357,662,405" id="s363">
 </map>
 <!--	Skill Points	-->
-<p class="P Pa1 Py1" id="pt1r1c1"></p><p class="P Pa2 Py1" id="pt1r1c2"></p><p class="P Pa3 Py1" id="pt1r1c3"></p>
-<p class="P Pa1 Py2" id="pt1r2c1"></p><p class="P Pa2 Py2" id="pt1r2c2"></p><p class="P Pa3 Py2" id="pt1r2c3"></p>
-<p class="P Pa1 Py3" id="pt1r3c1"></p><p class="P Pa2 Py3" id="pt1r3c2"></p><p class="P Pa3 Py3" id="pt1r3c3"></p>
-<p class="P Pa1 Py4" id="pt1r4c1"></p><p class="P Pa2 Py4" id="pt1r4c2"></p><p class="P Pa3 Py4" id="pt1r4c3"></p>
-<p class="P Pa1 Py5" id="pt1r5c1"></p><p class="P Pa2 Py5" id="pt1r5c2"></p><p class="P Pa3 Py5" id="pt1r5c3"></p>
-<p class="P Pa1 Py6" id="pt1r6c1"></p><p class="P Pa2 Py6" id="pt1r6c2"></p><p class="P Pa3 Py6" id="pt1r6c3"></p>
+<p class="P Pa1 Py1" id="p111"></p><p class="P Pa2 Py1" id="p112"></p><p class="P Pa3 Py1" id="p113"></p>
+<p class="P Pa1 Py2" id="p121"></p><p class="P Pa2 Py2" id="p122"></p><p class="P Pa3 Py2" id="p123"></p>
+<p class="P Pa1 Py3" id="p131"></p><p class="P Pa2 Py3" id="p132"></p><p class="P Pa3 Py3" id="p133"></p>
+<p class="P Pa1 Py4" id="p141"></p><p class="P Pa2 Py4" id="p142"></p><p class="P Pa3 Py4" id="p143"></p>
+<p class="P Pa1 Py5" id="p151"></p><p class="P Pa2 Py5" id="p152"></p><p class="P Pa3 Py5" id="p153"></p>
+<p class="P Pa1 Py6" id="p161"></p><p class="P Pa2 Py6" id="p162"></p><p class="P Pa3 Py6" id="p163"></p>
 
-<p class="P Pb1 Py1" id="pt2r1c1"></p><p class="P Pb2 Py1" id="pt2r1c2"></p><p class="P Pb3 Py1" id="pt2r1c3"></p>
-<p class="P Pb1 Py2" id="pt2r2c1"></p><p class="P Pb2 Py2" id="pt2r2c2"></p><p class="P Pb3 Py2" id="pt2r2c3"></p>
-<p class="P Pb1 Py3" id="pt2r3c1"></p><p class="P Pb2 Py3" id="pt2r3c2"></p><p class="P Pb3 Py3" id="pt2r3c3"></p>
-<p class="P Pb1 Py4" id="pt2r4c1"></p><p class="P Pb2 Py4" id="pt2r4c2"></p><p class="P Pb3 Py4" id="pt2r4c3"></p>
-<p class="P Pb1 Py5" id="pt2r5c1"></p><p class="P Pb2 Py5" id="pt2r5c2"></p><p class="P Pb3 Py5" id="pt2r5c3"></p>
-<p class="P Pb1 Py6" id="pt2r6c1"></p><p class="P Pb2 Py6" id="pt2r6c2"></p><p class="P Pb3 Py6" id="pt2r6c3"></p>
+<p class="P Pb1 Py1" id="p211"></p><p class="P Pb2 Py1" id="p212"></p><p class="P Pb3 Py1" id="p213"></p>
+<p class="P Pb1 Py2" id="p221"></p><p class="P Pb2 Py2" id="p222"></p><p class="P Pb3 Py2" id="p223"></p>
+<p class="P Pb1 Py3" id="p231"></p><p class="P Pb2 Py3" id="p232"></p><p class="P Pb3 Py3" id="p233"></p>
+<p class="P Pb1 Py4" id="p241"></p><p class="P Pb2 Py4" id="p242"></p><p class="P Pb3 Py4" id="p243"></p>
+<p class="P Pb1 Py5" id="p251"></p><p class="P Pb2 Py5" id="p252"></p><p class="P Pb3 Py5" id="p253"></p>
+<p class="P Pb1 Py6" id="p261"></p><p class="P Pb2 Py6" id="p262"></p><p class="P Pb3 Py6" id="p263"></p>
 
-<p class="P Pc1 Py1" id="pt3r1c1"></p><p class="P Pc2 Py1" id="pt3r1c2"></p><p class="P Pc3 Py1" id="pt3r1c3"></p>
-<p class="P Pc1 Py2" id="pt3r2c1"></p><p class="P Pc2 Py2" id="pt3r2c2"></p><p class="P Pc3 Py2" id="pt3r2c3"></p>
-<p class="P Pc1 Py3" id="pt3r3c1"></p><p class="P Pc2 Py3" id="pt3r3c2"></p><p class="P Pc3 Py3" id="pt3r3c3"></p>
-<p class="P Pc1 Py4" id="pt3r4c1"></p><p class="P Pc2 Py4" id="pt3r4c2"></p><p class="P Pc3 Py4" id="pt3r4c3"></p>
-<p class="P Pc1 Py5" id="pt3r5c1"></p><p class="P Pc2 Py5" id="pt3r5c2"></p><p class="P Pc3 Py5" id="pt3r5c3"></p>
-<p class="P Pc1 Py6" id="pt3r6c1"></p><p class="P Pc2 Py6" id="pt3r6c2"></p><p class="P Pc3 Py6" id="pt3r6c3"></p>
+<p class="P Pc1 Py1" id="p311"></p><p class="P Pc2 Py1" id="p312"></p><p class="P Pc3 Py1" id="p313"></p>
+<p class="P Pc1 Py2" id="p321"></p><p class="P Pc2 Py2" id="p322"></p><p class="P Pc3 Py2" id="p323"></p>
+<p class="P Pc1 Py3" id="p331"></p><p class="P Pc2 Py3" id="p332"></p><p class="P Pc3 Py3" id="p333"></p>
+<p class="P Pc1 Py4" id="p341"></p><p class="P Pc2 Py4" id="p342"></p><p class="P Pc3 Py4" id="p343"></p>
+<p class="P Pc1 Py5" id="p351"></p><p class="P Pc2 Py5" id="p352"></p><p class="P Pc3 Py5" id="p353"></p>
+<p class="P Pc1 Py6" id="p361"></p><p class="P Pc2 Py6" id="p362"></p><p class="P Pc3 Py6" id="p363"></p>
 
 <!--	Skill Icons	-->
-<img class="S Sa1 Sy1" id="s111"></p><img class="S Sa2 Sy1" id="s112"></p><img class="S Sa3 Sy1" id="s113"></p>
-<img class="S Sa1 Sy2" id="s121"></p><img class="S Sa2 Sy2" id="s122"></p><img class="S Sa3 Sy2" id="s123"></p>
-<img class="S Sa1 Sy3" id="s131"></p><img class="S Sa2 Sy3" id="s132"></p><img class="S Sa3 Sy3" id="s133"></p>
-<img class="S Sa1 Sy4" id="s141"></p><img class="S Sa2 Sy4" id="s142"></p><img class="S Sa3 Sy4" id="s143"></p>
-<img class="S Sa1 Sy5" id="s151"></p><img class="S Sa2 Sy5" id="s152"></p><img class="S Sa3 Sy5" id="s153"></p>
-<img class="S Sa1 Sy6" id="s161"></p><img class="S Sa2 Sy6" id="s162"></p><img class="S Sa3 Sy6" id="s163"></p>
+<img class="I Ia1 Iy1" id="i111"></p><img class="I Ia2 Iy1" id="i112"></p><img class="I Ia3 Iy1" id="i113"></p>
+<img class="I Ia1 Iy2" id="i121"></p><img class="I Ia2 Iy2" id="i122"></p><img class="I Ia3 Iy2" id="i123"></p>
+<img class="I Ia1 Iy3" id="i131"></p><img class="I Ia2 Iy3" id="i132"></p><img class="I Ia3 Iy3" id="i133"></p>
+<img class="I Ia1 Iy4" id="i141"></p><img class="I Ia2 Iy4" id="i142"></p><img class="I Ia3 Iy4" id="i143"></p>
+<img class="I Ia1 Iy5" id="i151"></p><img class="I Ia2 Iy5" id="i152"></p><img class="I Ia3 Iy5" id="i153"></p>
+<img class="I Ia1 Iy6" id="i161"></p><img class="I Ia2 Iy6" id="i162"></p><img class="I Ia3 Iy6" id="i163"></p>
 
-<img class="S Sb1 Sy1" id="s211"></p><img class="S Sb2 Sy1" id="s212"></p><img class="S Sb3 Sy1" id="s213"></p>
-<img class="S Sb1 Sy2" id="s221"></p><img class="S Sb2 Sy2" id="s222"></p><img class="S Sb3 Sy2" id="s223"></p>
-<img class="S Sb1 Sy3" id="s231"></p><img class="S Sb2 Sy3" id="s232"></p><img class="S Sb3 Sy3" id="s233"></p>
-<img class="S Sb1 Sy4" id="s241"></p><img class="S Sb2 Sy4" id="s242"></p><img class="S Sb3 Sy4" id="s243"></p>
-<img class="S Sb1 Sy5" id="s251"></p><img class="S Sb2 Sy5" id="s252"></p><img class="S Sb3 Sy5" id="s253"></p>
-<img class="S Sb1 Sy6" id="s261"></p><img class="S Sb2 Sy6" id="s262"></p><img class="S Sb3 Sy6" id="s263"></p>
+<img class="I Ib1 Iy1" id="i211"></p><img class="I Ib2 Iy1" id="i212"></p><img class="I Ib3 Iy1" id="i213"></p>
+<img class="I Ib1 Iy2" id="i221"></p><img class="I Ib2 Iy2" id="i222"></p><img class="I Ib3 Iy2" id="i223"></p>
+<img class="I Ib1 Iy3" id="i231"></p><img class="I Ib2 Iy3" id="i232"></p><img class="I Ib3 Iy3" id="i233"></p>
+<img class="I Ib1 Iy4" id="i241"></p><img class="I Ib2 Iy4" id="i242"></p><img class="I Ib3 Iy4" id="i243"></p>
+<img class="I Ib1 Iy5" id="i251"></p><img class="I Ib2 Iy5" id="i252"></p><img class="I Ib3 Iy5" id="i253"></p>
+<img class="I Ib1 Iy6" id="i261"></p><img class="I Ib2 Iy6" id="i262"></p><img class="I Ib3 Iy6" id="i263"></p>
 
-<img class="S Sc1 Sy1" id="s311"></p><img class="S Sc2 Sy1" id="s312"></p><img class="S Sc3 Sy1" id="s313"></p>
-<img class="S Sc1 Sy2" id="s321"></p><img class="S Sc2 Sy2" id="s322"></p><img class="S Sc3 Sy2" id="s323"></p>
-<img class="S Sc1 Sy3" id="s331"></p><img class="S Sc2 Sy3" id="s332"></p><img class="S Sc3 Sy3" id="s333"></p>
-<img class="S Sc1 Sy4" id="s341"></p><img class="S Sc2 Sy4" id="s342"></p><img class="S Sc3 Sy4" id="s343"></p>
-<img class="S Sc1 Sy5" id="s351"></p><img class="S Sc2 Sy5" id="s352"></p><img class="S Sc3 Sy5" id="s353"></p>
-<img class="S Sc1 Sy6" id="s361"></p><img class="S Sc2 Sy6" id="s362"></p><img class="S Sc3 Sy6" id="s363"></p>
+<img class="I Ic1 Iy1" id="i311"></p><img class="I Ic2 Iy1" id="i312"></p><img class="I Ic3 Iy1" id="i313"></p>
+<img class="I Ic1 Iy2" id="i321"></p><img class="I Ic2 Iy2" id="i322"></p><img class="I Ic3 Iy2" id="i323"></p>
+<img class="I Ic1 Iy3" id="i331"></p><img class="I Ic2 Iy3" id="i332"></p><img class="I Ic3 Iy3" id="i333"></p>
+<img class="I Ic1 Iy4" id="i341"></p><img class="I Ic2 Iy4" id="i342"></p><img class="I Ic3 Iy4" id="i343"></p>
+<img class="I Ic1 Iy5" id="i351"></p><img class="I Ic2 Iy5" id="i352"></p><img class="I Ic3 Iy5" id="i353"></p>
+<img class="I Ic1 Iy6" id="i361"></p><img class="I Ic2 Iy6" id="i362"></p><img class="I Ic3 Iy6" id="i363"></p>
 
 <!--	Equipment Menus 	-->
 <div id="equipment" style="display: block; float: right; width: 200px; height: 300px; position: relative;">
@@ -127,14 +127,14 @@
 <select class="dropdown" id="dropdown_amulet" onChange="equip('amulet', this.value)"></select>
 <select class="dropdown" id="dropdown_ring1" onChange="equip('ring1', this.value)"></select>
 <select class="dropdown" id="dropdown_ring2" onChange="equip('ring2', this.value)"></select>
-<select class="dropdown" id="dropdown_weapon" onChange="equip('weapon', this.value)"></select>	<!--onChange="checkTwoHanders(this.value)"-->
+<select class="dropdown" id="dropdown_weapon" onChange="equip('weapon', this.value)"></select>
 <select class="dropdown" id="dropdown_offhand" onChange="equip('offhand', this.value)"></select>
 <select class="dropdown" id="dropdown_charms" onChange="addCharm(this.value)"></select>
 </div>
 
 <!--	skill hover text	-->
 <div class="hover" style="display: none;" id="tooltip">
-	<a id="title" class="green"></a><br>
+	<a id="title" class="green_name"></a><br>
 	<a id="description"></a>
 	<a id="graytext" class="gray"></a>
 	<a id="pretext"></a>
